--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,10 @@
             android:value="@string/app_id" />
         <activity android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" />
-        
+        <activity android:name="PickerActivity"
+          android:label="@string/app_name" />
+        <activity android:name="ScrumptiousApplication"
+          android:label="@string/app_name" />
     </application>
 
 </manifest>
