--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.douglasfukuharastudy.MainActivity"
+            android:name="com.example.douglasfukuharastudy.NewMainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
         <activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+            android:label="@string/app_name" />
+        <activity android:name="PickerActivity"
+          android:label="@string/app_name" />
+        <activity android:name="ScrumptiousApplication"
+          android:label="@string/app_name" />
     </application>
 
 </manifest>
